--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </h1>
                     <div class="title__line ml-auto mr-auto"></div>
                     <p>
-                        Фрукти та їжа<br>
+                        Екзотичні фрукти та їжа<br>
                         <span>з усього світу</span>
                     </p>
                 </div>
